<resources>
    <string name="app_name">CheFTec</string>
    <string name="login">Log In</string>
    <string name="signup">Sign UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_calender">Calender</string>
    <string name="title_profile">Profile</string>
    <string name="main_information">Main Information</string>
    <string name="sync">Sync</string>
    <string name="username">Username</string>
    <string name="mealoftheday">You Can Find daily Inspiration Recipes of Different Categories</string>
    <string name="stepbystep">Step by Step Recieps</string>
    <string name="start">Start</string>
    <string name="meal_name">Name</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="whattocooktoday">What to Cook Today?</string>
    <string name="schedule">Weekly scheduled Meals</string>
    <string name="sceduleDetails">Add your Fav Meals to Schedule</string>
    <string name="StepsDetails">Learn How To Cook Delicious Recipes Step by Step</string>
    <string name="skip">Skip</string>
    <string name="signupwithgoogle">Sign Up with google</string>
    <string name="daily">Daily Inspiration</string>
    <string name="Categories">Categories</string>


    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="remove">remove</string>
    <string name="categories">Categories</string>
    <string name="ingredient">Ingredient</string>
    <string name="countries">Countries</string>

    <string name="signInWithGoogle">Sign in with Google</string>

    <string name="trending">Trending</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>

    <string-array name="days">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>


</resources>