<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_favourites"/>

    <item
        android:id="@+id/calenderFragment"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_calender"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user_icon"
        android:title="@string/title_profile"/>

</menu>